# idmguard

./: README.md  pyproject.toml
src/idmguard/: __init__.py  __main__.py
src/idmguard/compliance/: iam_checks.py
src/idmguard/scanners/: key_scanner.py  mfa_scanner.py  policy_scanner.py  rbac_analyzer.py
tests/: test_policy_scanner.py
