[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "idmguard"
version = "0.1.0"
description = "Identity & Access Management Security Toolkit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "idmguard Contributors"}]
keywords = ["iam,identity,access-management,rbac"]
dependencies = []
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[project.scripts]
idmguard = "idmguard.__main__:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
